ASReaderModel as a member of ASReaderTrainer

--- a/ASReader.cfg
+++ b/ASReader.cfg
@@ -18,7 +18,7 @@ model_save_file = model_save.txt
 model_args_save_file = model_args_save.txt
 keep_top_vocab_percentage = 90.0
 max_data_points = None
-should_load_saved_data = true
+should_load_saved_data = false
 
 [ExecutionMode]
 mode = training
@@ -34,7 +34,7 @@ should_load_saved_model = false
 [TrainingParameters]
 adam_alpha = 0.001
 minibatch_size = 16
-n_epochs = 5
+n_epochs = 2
 gradient_clipping_thresh = 10.0
 lookup_init_scale = 1.0
 n_times_predict_in_epoch = 2
